# stump

./: .gitignore  stack.yaml  stump.cabal
app/: Main.hs
src/: Lib.hs
