name:                stump
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/stump#readme
license:             BSD3
--license-file:        LICENSE
author:              monnef
maintainer:          example@example.com
copyright:           2017 monnef
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , webdriver == 0.8.*
                     , text == 1.*
                     , transformers == 0.5.2.*
                     , lens == 4.*
                     , safe == 0.3.*
                     , aeson == 0.11.*
  default-language:    Haskell2010

executable stump-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , stump
                     , text == 1.*
                     , webdriver == 0.8.*
                     , scotty == 0.11.*
                     , transformers == 0.5.2.*
                     , aeson == 0.11.*
                     , bytestring == 0.10.*
  default-language:    Haskell2010

test-suite stump-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , stump
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stump
